Modify all the SQL queries to use the new iam schema